--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@ Hello and welcome to my small little Y2K themed website. Enjoy!
   </div>
 </div>
 <div class="panel">
+  <div class="panel-title">Light... - By Lonnie (11/26/2025)</div>
+  <div class="panel-body">
+Don't stare up at a light, its not good for you.
+  </div>
+</div>
+<div class="panel">
   <div class="panel-title">No More Posts Left To Find... (Yet!)</div>
   <div class="panel-body">
   <a href="https://forms.gle/B7U2j6NHD94mpoFPA">
