--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 <p>This game contains flashing lights!</p>
 <hr>
 <h1>Go to "elitaylor120.github.io/clicker.zip" to download</h1>
+<p>(It will display a 404 error, but the file will automagically download at the same time.)</p>
