--- a/index.html
+++ b/index.html
@@ -1,36 +1,28 @@
-<h1>welcome to classicblue.new!</h1>
-<p>we are a nice, fun, safe, and respectful community!</p>
-<br>
-<br>
-<h2>posts:</h2>
-<hr>
-<h3>Welcome Post: TheOwner101.</h3>
-<p>Welcome to my little social media named Classicblue! I hope you enjoy and have fun.</p> 
-<hr>
-<br>
-<br>
-<hr>
-<h3>Aubree: AubreeVtube</h3>
-<p>am i diddy?</p>
-<hr>
-<br>
-<br>
-<a href="https://docs.google.com/forms/d/e/1FAIpQLSdelHcs4bv9SARxbd8nrMsHpRR1YkvUrceb0DSnSPvRTU6tcw/viewform?usp=dialog" target="_Blank">
-  <button>make a post.</button>
-</a>
-
-<p>Submissions are collected using Google Forms.
-Google may collect technical data as described in their Privacy Policy.
-classicblue.new does not receive or store personal information, due to COPPA protection.</p>
-<style>
-body {
-  background-color: #1DA1F2;
-  color: white;
-}
-
-button {
-  color: white;
-  background-color: #1DA1F2;
-  border-color: white;
-}
-</style>
+<html>
+  <head>
+    <title>Home Page</title>
+  </head>
+  <body>
+    <h1>Welcome to Fun 'N Posts! :)</h1>
+    <p>This is a respectful and nicely taken-care-of forums community! </p>
+    <hr>
+    <h3>Hello! - Eli Taylor, 2/28/2026</h3>
+    <p>I just wanted to say hi! BTW I'm the founder of this website. :)</p>
+    <hr>
+  </body>
+  <style>
+    h1 {
+      color: white;
+    }
+    h3 {
+      color: white;
+    }
+    p {
+      color: lightgrey;
+    }
+    body {
+      font-family: Courier New;
+      background-color: darkcyan;
+    }
+  </style>
+</html>
